--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "youch",
-  "version": "2.0.10",
+  "name": "@stellar-apps/youch",
+  "version": "2.0.11",
   "description": "HTML Pretty error stack viewer",
   "main": "src/Youch.js",
   "files": [
@@ -22,6 +22,7 @@
     "concat": "^1.0.3",
     "cz-conventional-changelog": "^2.1.0",
     "japa": "^2.0.3",
+    "jsesc": "^2.5.2",
     "standard": "^12.0.1",
     "supertest": "^3.3.0",
     "uglify-js": "^3.4.9"
@@ -34,7 +35,8 @@
   "dependencies": {
     "cookie": "^0.3.1",
     "mustache": "^3.0.0",
-    "stack-trace": "0.0.10"
+    "stack-trace": "0.0.10",
+    "stringify-entities": "^2.0.0"
   },
   "repository": {
     "type": "git",
@@ -49,7 +51,9 @@
     "url": "https://github.com/poppinss/youch/issues"
   },
   "standard": {
-    "ignore": ["static"]
+    "ignore": [
+      "static"
+    ]
   },
   "homepage": "https://github.com/poppinss/youch#readme"
 }
